# video-downloader

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: controller.rs  downloader.rs  main.rs  model.rs  view.rs
