[package]
name = "rust_video_downloader"
version = "0.0.2"
#authors = ["Lider Nikita <NONE@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "http2"], default-features = false }
yt-dlp = { version = "1.4.8", features = ["tracing", "rustls"], default-features = false }
rfd = "0.17.2"
tokio = { version = "1", features = ["full"]}

eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
env_logger = "0.11.8"
