[package]
name = "rust_video_downloader"
version = "0.0.2"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
rfd = "0.17.2"
reqwest = { version = "0.12.28", features = ["http2", "stream"] }
tokio = { version = "1", features = ["full"] }
yt-dlp = { version = "1.4.8", features = ["tracing"], default-features = false }
